# universal-tester

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml
src/universal_tester/: __init__.py  cli.py  core.py
src/universal_tester/detectors/: __init__.py  enhanced_import_detector.py  kotlin_import_detector.py
src/universal_tester/llm/: __init__.py  factory.py  health_check.py  java_validator.py
src/universal_tester/prompts/: __init__.py  kotlin_test_generation_prompts.py  prompt_builder.py  system_prompts.py  test_generation_prompts.py  ui_messages.py
src/universal_tester/ui/: __init__.py  chainlit.md  chainlit.toml  chainlit_ui.py  main.py
